@@ -4,6 +4,7 @@
 
 ################################################################################
 # CHANGE LOG (last 20 changes)
+# 04.12.2015: Removed 'Marker' from required columns.
 # 28.08.2015: Added importFrom.
 # 05.05.2015: Changed parameter 'ignoreCase' to 'ignore.case' for 'checkSubset' function.
 # 11.10.2014: Added 'focus', added 'parent' parameter.
@@ -117,7 +118,7 @@ checkSubset_gui <- function(env=parent.frame(), savegui=NULL, debug=FALSE, paren
     val_obj <- svalue(dataset_drp)
     
     # Check if suitable.
-    requiredCol <- c("Sample.Name", "Marker")
+    requiredCol <- c("Sample.Name")
     ok <- checkDataset(name=val_obj, reqcol=requiredCol,
                        env=env, parent=w, debug=debug)
     
@@ -155,7 +156,7 @@ checkSubset_gui <- function(env=parent.frame(), savegui=NULL, debug=FALSE, paren
     val_obj <- svalue(dataset_ref_drp)
     
     # Check if suitable.
-    requiredCol <- c("Sample.Name", "Marker")
+    requiredCol <- c("Sample.Name")
     ok <- checkDataset(name=val_obj, reqcol=requiredCol,
                        env=env, parent=w, debug=debug)
     
